--- a/WEB/selectorWeb/src/app/app.component.html
+++ b/WEB/selectorWeb/src/app/app.component.html
@@ -1,22 +1,3 @@
-<button mat-raised-button (click)="subscribe()">SUBSCRIBE TO FOOBAR TOPIC</button>
-<button mat-raised-button (click)="sendMsg()">SEND FOOBAR MESSAGE</button>
-<button mat-raised-button (click)="unsubscribe()">UNSUBSCRIBE FROM FOOBAR TOPIC</button>
-
-<div fxLayout>
-    <div fxFlex="20">
-        <h1>Messages:</h1>
-        <p *ngFor="let message of messages">
-            {{message | json}}
-        </p>
-    </div>
-    <div>
-        <h1>Status info:</h1>
-        <p *ngFor="let statusMessage of status">
-            {{statusMessage}}
-        </p>
-    </div>
-</div>
-
 <div class="container mt-4 mb-2">
     <div class="row">
         <div class="col-12 text-center">
@@ -26,7 +7,7 @@
     <div class="row justify-content-center">
         <div class="col-12 col-md-5 col-lg-3 m-4 text-center" *ngFor="let map of maps">
             <img src="assets/maps/{{ map }}.jpg" alt="mapa{{ map }}" width="100%" class="m-2">
-            <button class="btn btn-primary" type="submit" (click)="select(map)">Seleccionar mapa</button>
+            <button class="btn btn-primary" type="submit" (click)="sendMsg(map)">Seleccionar mapa</button>
         </div>
     </div>
 </div>
