--- a/WEB/selectorWeb/src/app/app.component.html
+++ b/WEB/selectorWeb/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4 mb-2">
+<div class="container mt-4 mb-2" *ngIf="!load">
     <div class="row">
         <div class="col-12 text-center">
             <h1>Seleccione imagen a desplegar en <strong>Modulo IGM</strong></h1>
