--- a/WEB/selectorWeb/src/app/app.component.html
+++ b/WEB/selectorWeb/src/app/app.component.html
@@ -11,3 +11,14 @@
         </div>
     </div>
 </div>
+
+<div class="container" *ngIf="load">
+    <div class="row">
+        <div class="col-12 text-center mt-4">
+            <h2>Cargando</h2>
+        </div>
+        <div class="col-12 text-center padTop">
+            <app-load></app-load>
+        </div>
+    </div>
+</div>
