--- a/WEB/selectorWeb/src/app/app.component.html
+++ b/WEB/selectorWeb/src/app/app.component.html
@@ -1,24 +1,7 @@
-<div class="container mt-4 mb-2" *ngIf="!load">
+<app-header></app-header>
+<div class="container mt-4 mb-2">
     <div class="row">
-        <div class="col-12 text-center">
-            <h1>Seleccione imagen a desplegar en <strong>Modulo IGM</strong></h1>
-        </div>
-    </div>
-    <div class="row justify-content-center">
-        <div class="col-12 col-md-5 col-lg-3 m-4 text-center" *ngFor="let map of maps">
-            <img src="assets/maps/{{ map }}.jpg" alt="mapa{{ map }}" width="100%" class="m-2">
-            <button class="btn btn-primary" type="submit" (click)="sendMsg(map)">Seleccionar mapa</button>
-        </div>
-    </div>
-</div>
-
-<div class="container" *ngIf="load">
-    <div class="row">
-        <div class="col-12 text-center mt-4">
-            <h2>Cargando</h2>
-        </div>
-        <div class="col-12 text-center padTop">
-            <app-load></app-load>
-        </div>
+        <app-home *ngIf="!_igmService.load"></app-home>
+        <app-load *ngIf="_igmService.load"></app-load>
     </div>
 </div>
