--- a/WEB/selectorWeb/src/app/components/load/load.component.html
+++ b/WEB/selectorWeb/src/app/components/load/load.component.html
@@ -1,3 +1,6 @@
+<div class="col-12 text-center mt-4">
+    <h2>Cargando</h2>
+</div>
 <div class='tetrominos'>
     <div class='tetromino box1'></div>
     <div class='tetromino box2'></div>
