--- a/WEB/selectorWeb/src/app/components/header/header.component.html
+++ b/WEB/selectorWeb/src/app/components/header/header.component.html
@@ -1,3 +1,12 @@
-<div class="col-12 text-center">
-    <h1>Seleccione imagen a desplegar en <strong>Modulo IGM</strong></h1>
+<div class="row align-items-center justify-content-between main">
+    <div class="col-3 text-center">
+        <img src="assets/logos/logo_igm.png" alt="logo IGM">
+    </div>
+    <div col="col-6 text-center">
+        <h3 *ngIf="!_igmService.load">Seleccione imagen a desplegar en <strong>Modulo IGM</strong></h3>
+        <h3 *ngIf="_igmService.load">Cargando...</h3>
+    </div>
+    <div class="col-3 text-center">
+        <img src="assets/logos/logo_proteinlab.svg" alt="logo Proteinlab">
+    </div>
 </div>
