--- a/WEB/selectorWeb/src/app/components/home/home.component.html
+++ b/WEB/selectorWeb/src/app/components/home/home.component.html
@@ -1,6 +1,11 @@
 <div class="row justify-content-center">
+    <div class="col-8">
+        <button class="btn btn-outlet-primary w-100" (click)="_igmService.sendMsg('z')">LLevar todos los motores a cero </button>
+    </div>
+</div>
+<div class="row justify-content-center">
     <div class="col-12 col-md-5 col-lg-3 m-4 text-center" *ngFor="let map of maps">
-        <img src="assets/maps/{{ map }}.jpg" alt="mapa{{ map }}" width="100%" class="m-2">
-        <button class="btn btn-primary" type="submit" (click)="_igmService.sendMsg(map)">Seleccionar mapa</button>
+        <img src="assets/maps/{{ map.id }}.jpg" alt="mapa{{ map.id }}" width="100%" class="m-2">
+        <button class="btn btn-primary" type="submit" (click)="_igmService.sendMsg(map.serial)">Desplegar mapa {{ map.id }}</button>
     </div>
 </div>
