WEB - Eliminacion de propiedades img en header.scss y uso de class bootsrap

--- a/WEB/selectorWeb/src/app/components/header/header.component.html
+++ b/WEB/selectorWeb/src/app/components/header/header.component.html
@@ -1,12 +1,12 @@
-<div class="row align-items-center justify-content-between main">
-    <div class="col-3 text-center">
-        <img src="assets/logos/logo_igm.png" alt="logo IGM">
+<div class="row align-items-center justify-content-md-center main">
+    <div class="col-2 text-center">
+        <img src="assets/logos/logo_igm.png" alt="logo IGM" class="w-50">
     </div>
     <div col="col-6 text-center">
-        <h3 *ngIf="!_igmService.load">Seleccione imagen a desplegar en <strong>Modulo IGM</strong></h3>
+        <h4 *ngIf="!_igmService.load">Seleccione imagen a desplegar en <strong>Modulo IGM</strong></h4>
         <h3 *ngIf="_igmService.load">Cargando...</h3>
     </div>
-    <div class="col-3 text-center">
-        <img src="assets/logos/logo_proteinlab.svg" alt="logo Proteinlab">
+    <div class="col-2 text-center">
+        <img src="assets/logos/logo_proteinlab.svg" alt="logo Proteinlab" class="w-75">
     </div>
 </div>
