aplicar cambios de revision en header

--- a/WEB/selectorWeb/src/app/components/header/header.component.scss
+++ b/WEB/selectorWeb/src/app/components/header/header.component.scss
@@ -1,5 +1,5 @@
 .main {
-    background-color: gray !important;
-    height: 100px;
-    color: white;
+    background-color: white !important;
+    max-height: 100px;
+    color: #031520;
 }
