--- a/WEB/selectorWeb/src/app/components/header/header.component.html
+++ b/WEB/selectorWeb/src/app/components/header/header.component.html
@@ -3,10 +3,9 @@
         <img src="assets/logos/logo_igm.png" alt="logo IGM" class="w-50">
     </div>
     <div col="col-6 text-center">
-        <h4 *ngIf="!_igmService.load">Seleccione imagen a desplegar en <strong>Modulo IGM</strong></h4>
-        <h3 *ngIf="_igmService.load">Cargando...</h3>
+        <h2 class="px-4">Proyecto IGM + ProteinLab</h2>
     </div>
     <div class="col-2 text-center">
-        <img src="assets/logos/logo_proteinlab.svg" alt="logo Proteinlab" class="w-75">
+        <img src="assets/logos/logo_proteinlab.svg" alt="logo Proteinlab" class="w-100">
     </div>
 </div>
