--- a/WEB/selectorWeb/src/app/components/header/header.component.html
+++ b/WEB/selectorWeb/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="row align-items-center justify-content-md-center main">
+<div class="row align-items-center justify-content-md-center main py-3">
     <div class="col-2 text-center">
         <img src="assets/logos/logo_igm.png" alt="logo IGM" class="w-50">
     </div>
