WEB - cambios en fondo

--- a/WEB/selectorWeb/src/app/app.component.html
+++ b/WEB/selectorWeb/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="imageBack">
+<div class="imageBack h-100">
     <div class="pt-4 pb-5 base">
         <div class="row justify-content-center">
             <h4 *ngIf="_igmService.load"> Cargando módulo...</h4>
