--- a/WEB/selectorWeb/src/app/app.component.scss
+++ b/WEB/selectorWeb/src/app/app.component.scss
@@ -2,10 +2,12 @@
     background-color: rgba($color: #031520, $alpha: 0.8);
     color: white;
     font-family: 'Raleway', sans-serif;
-    height: 100%;
+    height: 30rem;
 }
 
 .imageBack {
     background-image: url('/assets/maps/fondo.jpg');
-    background-position: -500px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
