BACK - boton para apagar sistema desde portal y cargar chromium full screen

--- a/WEB/selectorWeb/src/app/components/home/home.component.html
+++ b/WEB/selectorWeb/src/app/components/home/home.component.html
@@ -28,3 +28,9 @@
         </div>
     </div>
 </div>
+
+<div class="row justify-content-center">
+    <div class="col-3">
+        <button type="button" class="btn btn-danger btn-block" (click)="_igmService.sendMsg('off')">Apagar sistema</button>
+    </div>
+</div>
