--- a/WEB/selectorWeb/src/app/components/home/home.component.html
+++ b/WEB/selectorWeb/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-center mt-3 pb-4">
+<div class="row justify-content-center mt-3 pb-5">
     <div class="col-3 text-center px-3 border-right">
         <div class="circulo" (click)="test('i')">
             <i class="fas fa-info">
@@ -29,8 +29,12 @@
     </div>
 </div>
 
-<div class="row justify-content-center align-items-end mt-5 pt-5">
-    <div class="col-6">
+<div class="row justify-content-around align-items-end mt-5 pt-5">
+    <div class="col-4">
         <button type="button" class="btn btn-danger btn-block" (click)="_igmService.sendMsg('off')">Apagar sistema</button>
+    </div>
+
+    <div class="col-4">
+        <button type="button" class="btn btn-warning btn-block" (click)="_igmService.sendMsg('reset')">Reiniciar sistema</button>
     </div>
 </div>
