--- a/WEB/selectorWeb/src/app/components/home/home.component.html
+++ b/WEB/selectorWeb/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-center mt-3 pb-5">
     <div class="col-3 text-center px-3 border-right">
-        <div class="circulo" (click)="test('i')">
+        <div class="circulo" (click)="info()">
             <i class="fas fa-info">
                 <p class="mt-2">Información del proyecto</p>
             </i>
