--- a/WEB/selectorWeb/src/app/components/info/info.component.html
+++ b/WEB/selectorWeb/src/app/components/info/info.component.html
@@ -1,19 +1,21 @@
 <div class="row justify-content-center">
-  <div class="col-12 text-center mb-4">
-    <h1>Proyecto kajakjakjakjakajkajakja kjakajkajkaj akjakjakaja kjakajkajka </h1>
-  </div>
-  <div class="col-2 text-center">
-      <img src="assets/logos/logo_igm.png" alt="logo Proteinlab" class="w-100">
-  </div>
-  <div class="col-2 text-center">
-      <img src="assets/logos/logo_proteinlab.svg" alt="logo Proteinlab" class="w-100">
-  </div>
-  <div class="col-2 text-center">
-      <img src="assets/logos/logo_vtte.svg" alt="logo Proteinlab" class="w-100">
-  </div>
+    <div class="col-12 text-center mb-4">
+        <h1>Proyecto kajakjakjakjakajkajakja kjakajkajkaj akjakjakaja kjakajkajka </h1>
+    </div>
+    <div class="col-2 text-center">
+        <img src="assets/logos/logo_igm.png" alt="logo Proteinlab" class="w-100">
+    </div>
+    <div class="col-2 text-center">
+        <img src="assets/logos/logo_proteinlab.svg" alt="logo Proteinlab" class="w-100">
+    </div>
+    <div class="col-2 text-center">
+        <img src="assets/logos/logo_vtte.svg" alt="logo Proteinlab" class="w-100">
+    </div>
 </div>
 <div class="row justify-content-center">
-  <div class="col-6">
-    Equipo Realizador
-  </div>
+    <div class="col-6">
+        Equipo Realizador
+    </div>
+
+    <button class="btn btn-success" (click)="home()">Regresar</button>
 </div>
