--- a/WEB/selectorWeb/src/app/components/header/header.component.html
+++ b/WEB/selectorWeb/src/app/components/header/header.component.html
@@ -1,9 +1,9 @@
-<div class="row align-items-center justify-content-md-center main py-3">
+<div class="row align-items-center justify-content-md-center main my-2">
     <div class="col-2 text-center">
         <img src="assets/logos/logo_igm.png" alt="logo IGM" class="w-50">
     </div>
     <div col="col-6 text-center">
-        <h2 class="px-4">Proyecto IGM + ProteinLab</h2>
+        <h2 class="px-4">Sistema de exhibición geográfica 3D</h2>
     </div>
     <div class="col-2 text-center">
         <img src="assets/logos/logo_proteinlab.svg" alt="logo Proteinlab" class="w-100">
