--- a/WEB/selectorWeb/src/app/components/info/info.component.html
+++ b/WEB/selectorWeb/src/app/components/info/info.component.html
@@ -1,21 +1,28 @@
-<div class="row justify-content-center">
-    <div class="col-12 text-center mb-4">
-        <h1>Proyecto kajakjakjakjakajkajakja kjakajkajkaj akjakjakaja kjakajkajka </h1>
-    </div>
-    <div class="col-2 text-center">
-        <img src="assets/logos/logo_igm.png" alt="logo Proteinlab" class="w-100">
-    </div>
-    <div class="col-2 text-center">
-        <img src="assets/logos/logo_proteinlab.svg" alt="logo Proteinlab" class="w-100">
-    </div>
-    <div class="col-2 text-center">
-        <img src="assets/logos/logo_vtte.svg" alt="logo Proteinlab" class="w-100">
+<div class="row justify-content-center headInfo py-4">
+    <div class="col-8 text-center">
+        <h2>Sistema de exhibición geográfica 3D</h2>
     </div>
 </div>
-<div class="row justify-content-center">
-    <div class="col-6">
-        Equipo Realizador
+<div class="bodyInfo py-4">
+    <div class="row justify-content-center my-3">
+        <div class="col-8 text-center">
+            <h4>Proyecto realizado de forma colaborativa entre Instituto Geografico Militar (IGM), Proteinlab - UTEM y la Vicerectoria de Transferencia Tecnologia y Extencion de la Universidad Tecnologica Metropolitana (UTEM). </h4>
+        </div>
     </div>
-
-    <button class="btn btn-success" (click)="home()">Regresar</button>
+    <div class="row justify-content-center align-items-center mt-3 mb-3">
+        <div class="col-3 text-center">
+            <img src="assets/logos/logo_igm.png" alt="logo Proteinlab" class="w-50">
+        </div>
+        <div class=" col-3 text-center ">
+            <img src="assets/logos/logo_proteinlab.svg " alt="logo Proteinlab " class="w-100">
+        </div>
+        <div class="col-3 text-center ">
+            <img src="assets/logos/logo_vtte.svg " alt="logo Proteinlab " class="w-100">
+        </div>
+    </div>
+    <div class="row justify-content-center my-4">
+        <div class="col-3">
+            <button class="btn btn-block btn-dark " (click)="home() ">Regresar</button>
+        </div>
+    </div>
 </div>
