WEB - ajustes de estetica para pantalla RPI

--- a/WEB/selectorWeb/src/app/components/header/header.component.html
+++ b/WEB/selectorWeb/src/app/components/header/header.component.html
@@ -1,11 +1,11 @@
-<div class="row align-items-center justify-content-md-center main my-2">
+<div class="row align-items-center justify-content-center main my-2">
     <div class="col-2 text-center">
         <img src="assets/logos/logo_igm.png" alt="logo IGM" class="w-50">
     </div>
     <div col="col-6 text-center">
-        <h2 class="px-4">Sistema de exhibición geográfica 3D</h2>
+        <h3 class="px-4">Sistema de exhibición geográfica 3D</h3>
     </div>
-    <div class="col-2 text-center">
+    <div class="col-3 text-center">
         <img src="assets/logos/logo_proteinlab.svg" alt="logo Proteinlab" class="w-100">
     </div>
 </div>
