--- a/WEB/selectorWeb/src/app/components/info/info.component.html
+++ b/WEB/selectorWeb/src/app/components/info/info.component.html
@@ -1,12 +1,12 @@
 <div class="row justify-content-center headInfo py-4">
     <div class="col-8 text-center">
-        <h2>Sistema de exhibición geográfica 3D</h2>
+        <h3>Sistema de exhibición geográfica 3D</h3>
     </div>
 </div>
 <div class="bodyInfo py-4">
     <div class="row justify-content-center my-3">
         <div class="col-8 text-center">
-            <h4>Proyecto realizado de forma colaborativa entre Instituto Geografico Militar (IGM), Proteinlab - UTEM y la Vicerectoria de Transferencia Tecnologia y Extencion de la Universidad Tecnologica Metropolitana (UTEM). </h4>
+            <h5>Proyecto realizado de forma colaborativa entre Instituto Geográfico Militar (IGM), Proteinlab - UTEM y la Vicerrectoría de Transferencia Tecnológica y Extensión de la Universidad Tecnológica Metropolitana (UTEM).</h5>
         </div>
     </div>
     <div class="row justify-content-center align-items-center mt-3 mb-3">
