--- a/WEB/selectorWeb/src/app/components/header/header.component.html
+++ b/WEB/selectorWeb/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
         <img src="assets/logos/logo_igm.png" alt="logo IGM" class="w-50">
     </div>
     <div col="col-6 text-center">
-        <h3 class="px-4">Sistema de exhibición geográfica 3D</h3>
+        <h3>Sistema de exhibición geográfica 3D</h3>
     </div>
     <div class="col-3 text-center">
         <img src="assets/logos/logo_proteinlab.svg" alt="logo Proteinlab" class="w-100">
