--- a/WEB/selectorWeb/src/app/components/header/header.component.html
+++ b/WEB/selectorWeb/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
     <div col="col-6 text-center">
         <h3>Sistema de exhibición geográfica 3D</h3>
     </div>
-    <div class="col-3 text-center">
+    <div class="col-2 ml-2 text-center">
         <img src="assets/logos/logo_proteinlab.svg" alt="logo Proteinlab" class="w-100">
     </div>
 </div>
