WEB - cambio de imagen vtte

--- a/WEB/selectorWeb/src/app/components/info/info.component.html
+++ b/WEB/selectorWeb/src/app/components/info/info.component.html
@@ -17,7 +17,7 @@
             <img src="assets/logos/logo_proteinlab.svg " alt="logo Proteinlab " class="w-100">
         </div>
         <div class="col-3 text-center ">
-            <img src="assets/logos/logo_vtte.svg " alt="logo Proteinlab " class="w-100">
+            <img src="assets/logos/logo_vtte.png" alt="logo Proteinlab " class="w-100">
         </div>
     </div>
     <div class="row justify-content-center my-5">
